Quiz Sherlock added & other files updated

--- a/QuizHome/QuizHome.html
+++ b/QuizHome/QuizHome.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizHome</title>
-    <script src="QuizHome.js"></script>
     <link rel="stylesheet" href="QuizHome.css">
 </head>
 <body>
@@ -14,23 +13,24 @@
         <img src="../img/Sherlock.jpg">
         <h1>Sherlock Holmes</h1>
         <h3>It's really elementary!</h3>
-        <button disabled>Παίξε</button>
+        <button onclick="showLink1()">Παίξε</button>
     </div>
 
     <div class="quiz-menu">
         <img src="../img/90's.jpg">
         <h1>Δεκαετία του 90'</h1>
         <h3>Έτοιμος για την ανάμνηση;</h3>
-        <a href="../Quiz - 90's/Quiz90s.html"><button>Παίξε</button></a>
+        <button onclick="showLink2()">Παίξε</button>
     </div>
 
     <div class="quiz-menu">
         <img src="../img/corfu.jpg">
         <h1>Corfu</h1>
         <h3>Αν πας θα θες να ξαναπάς;</h3>
-        <a href="../Quiz - Corfu/Quizcorfu.html"><button>Παίξε</button></a>
+        <button onclick="showLink3()">Παίξε</button>
     </div>
 
 </div>
 </body>
+<script src="QuizHome.js"></script>
 </html>
