Js file removed & href added

--- a/QuizHome/QuizHome.html
+++ b/QuizHome/QuizHome.html
@@ -13,24 +13,23 @@
         <img src="../img/Sherlock.jpg">
         <h1>Sherlock Holmes</h1>
         <h3>It's really elementary!</h3>
-        <button onclick="showLink1()">Παίξε</button>
+        <a href="../Quiz - Sherlock/QuizSherlock.html"><button>Παίξε</button></a>
     </div>
 
     <div class="quiz-menu">
         <img src="../img/90's.jpg">
         <h1>Δεκαετία του 90'</h1>
         <h3>Έτοιμος για την ανάμνηση;</h3>
-        <button onclick="showLink2()">Παίξε</button>
+        <a href="../Quiz - 90's/Quiz90s.html"><button>Παίξε</button></a>
     </div>
 
     <div class="quiz-menu">
         <img src="../img/corfu.jpg">
         <h1>Corfu</h1>
         <h3>Αν πας θα θες να ξαναπάς;</h3>
-        <button onclick="showLink3()">Παίξε</button>
+        <a href="../Quiz - Corfu/Quizcorfu.html"><button>Παίξε</button></a>
     </div>
 
 </div>
 </body>
-<script src="QuizHome.js"></script>
 </html>
