--- a/Quiz - Sherlock/QuizSherlock.html
+++ b/Quiz - Sherlock/QuizSherlock.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Sherlock</title>
     <link rel="stylesheet" href="QuizSherlock.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="QuizSherlock.js"></script>
 </head>
 <body>
     <div class="container">
@@ -88,5 +86,6 @@
 
     </div>
 </body>
-
+<script src="./jquery-3.6.0.min.js"></script>
+<script src="QuizSherlock.js"></script>
 </html>
