--- a/Friends/Friends.html
+++ b/Friends/Friends.html
@@ -151,7 +151,7 @@
         </div> 
 
         <div class="question">
-            <div class="header"><h1>13) Ποιός ζήτησε να 'σπάσει' ο ενικός;</h1></div>
+            <div class="header"><h1>13) Ποιός ζήτησε να 'σπάσει' ο πλυθηντικός;</h1></div>
             <div class="text">
                 <button id="myBtn37" onclick="falso13()">Πελαγία</button>
                 <button id="myBtn38" onclick="falso13()">Αντώνης</button>
